2002-06-28  Andrew Cagney  <ac131313@redhat.com>

	* ppcnbsd-tdep.c (ppcnbsd_init_abi): Set frame_chain_valid to
	generic_func_frame_chain_valid.

2002-06-28  David O'Brien  <obrien@FreeBSD.org>

	* config/i386/nm-fbsd.h: Include <sys/param.h>.
	* config/i386/tm-fbsd.h: Likewise.

2002-06-28  Andrew Cagney  <ac131313@redhat.com>

	* rs6000-tdep.c (rs6000_gdbarch_init): Use
	generic_unwind_get_saved_register.

2002-06-27  Andrew Cagney  <ac131313@redhat.com>

	From 2002-06-27 John David Anglin <dave@hiauly1.hia.nrc.ca>:
	* regcache.c (supply_register): Add missing argument to
	register_buffer call.

2002-06-27  Andrew Cagney  <ac131313@redhat.com>

	* Makefile.in (init.c): Drop -e option to grep.  Not necessary and
	Solaris /bin/grep does not not like it.  From Peter Schauer.

2002-06-26  Tom Tromey  <tromey@redhat.com>

	* command.h (add_setshow_cmd): Declare.
	(add_setshow_cmd_full): Declare.
	* cli/cli-decode.c (add_setshow_cmd): No longer static.  Now
	returns void.  Use add_setshow_cmd_full.
	(add_setshow_cmd_full): New function.
	(add_setshow_auto_boolean_cmd): Use add_setshow_cmd_full.
	(add_setshow_boolean_cmd): Likewise.

2002-06-26  Jason Thorpe  <thorpej@wasabisystems.com>

	* config/vax/tm-vax.h: Protect from multiple inclusion.
	(TARGET_UPAGES, TARGET_NBPG, STACK_END_ADDR)
	(SIGTRAMP_START, SIGTRAMP_END, SIGCONTEXT_PC_OFFSET): Move to...
	* config/vax/tm-vaxbsd.h: ...here.  New file.
	* config/vax/vax.mt (TM_FILE): Set to tm-vaxbsd.h.

2002-06-26  Jason Thorpe  <thorpej@wasabisystems.com>

	* config/vax/tm-vax.h (BREAKPOINT): Remove.
	(BELIEVE_PCC_PROMOTION): Remove.
	(AP_REGNUM): Move to...
	* config/vax/nm-vax.h: ...here.
	* vax-tdep.c: Use VAX_AP_REGNUM instead of AP_REGNUM.
	(vax_breakpoint_from_pc): New function.
	(vax_gdbarch_init): Initialize gdbarch_breakpoint_from_pc
	and gdbarch_believe_pcc_promotion.

2002-06-26  Jason Thorpe  <thorpej@wasabisystems.com>

	* Makefile.in (vax_tdep_h): Define.  
	(vax-tdep.o): Use $(vax_tdep_h).