@@ -1,5 +1,13 @@
 2002-06-28  Andrew Cagney  <ac131313@redhat.com>
 
+	* Makefile.in (objfiles_h): Add $(bcache_h).
+	* objfiles.h: Include "bcache.h".
+
+	* Makefile.in (symtab_h): Remove $(bcache_h).
+	* symtab.h: Do not include "bcache.h".
+
+2002-06-28  Andrew Cagney  <ac131313@redhat.com>
+
 	* ppcnbsd-tdep.c (ppcnbsd_init_abi): Set frame_chain_valid to
 	generic_func_frame_chain_valid.
 
